compilateurDeca/src/test/deca/context/invalid/objet/methods/parametre_duplique.deca
// Description:
//    Sans-Objet
//    opération partielle ⊕ (ajout de paramètre)
//
// Resultats:
//    Ligne 13: 
//        Nom de paramètre dupliqué
// 
// Historique:
//    cree le 06/01/2026

class A {
    int methode(float a, int a){
        return 0;
    }
}